2009-12-21  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (cygwin_conv_path): Add band-aid including comment to avoid
	conversion from POSIX "." to Win32 ".\\".

2009-12-21  Corinna Vinschen  <corinna@vinschen.de>

	* exec.cc (execvp): Call find_exec with FE_NNF flag to enforce
	a NULL return when executable isn't found in $PATH.  Convert NULL
	to "".
	(execvpe): Ditto.
	* spawn.cc (spawn_guts): Return with EFAULT if prog_arg is NULL.
	Return with ENOENT if prog_arg is empty string.  Add a comment.

2009-12-21  Thomas Wolff  <towo@towo.net>

	* fhandler_console.cc (get_nonascii_key): Generate ESC prefix 
	for Alt modifier generically for function keys and keypad keys.
	Distinguish Normal, Ctrl, Shift, Ctrl-Shift rather 
	than Normal, Ctrl, Shift, Alt, so that in combination with generic 
	Alt handling all 8 combinations of these modifiers are distinguished.
	(keytable): Add escape sequences for remaining modified 
	function keys as a compatible extension using rxvt escape codes.
	Also distinguish keypad keys modified with Ctrl, Shift, Ctrl-Shift 
	using xterm-style modifier coding.

2009-12-21  Corinna Vinschen  <corinna@vinschen.de>

	Throughout, revert ill-conceived replacement of hMainThread with
	GetCurrentThread/NtCurrentThread.
	* dcrt0.cc (dll_crt0_0): Duplicate main thread handle to hMainThread
	again.

2009-12-19  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_console.cc (__vt100_conv): Minor formatting change.

2009-12-19  Thomas Wolff  <towo@towo.net>

	* fhandler_console.cc (write_console): Check for VT100
	graphics mode and transform wide characters in ASCII small
	letter range to corresponding graphics.
	(__vt100_conv): Table to transform small ASCII letters to line
	drawing graphics for use in VT100 graphics mode.
	(write_normal): Check for SO/SI control characters to
	enable/disable VT100 graphics mode.
	(base_chars): Enable SO/SI control characters for detection.
	(write): Check for ESC ( 0 / ESC ( B escape sequences to